--- a/landing/examples/advanced-usage.html
+++ b/landing/examples/advanced-usage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Advanced Usage - DoltStore</title>
-  <script src="../dist/doltlabs-dbstore.js"></script>
+  <script src="../../dist/doltlabs-dbstore.min.js"></script>
 </head>
 <body>
 
