--- a/landing/examples/basic-usage.html
+++ b/landing/examples/basic-usage.html
@@ -32,7 +32,7 @@
     </table>
   </div>
 
-  <script src="../dist/doltlabs-dbstore.min.js"></script>
+  <script src="../../dist/doltlabs-dbstore.min.js"></script>
 
   <script>
 
